--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,5 +2,6 @@ steps:
 - name: "gcr.io/cloud-builders/gcloud"
   args: ["app", "deploy"]
 - name: "gcr.io/cloud-builders/gcloud"
-  args: ["app", "deploy", 'new/']
+  args: ["app", "deploy", 'new/', '--no-stop-previous-version']
+
 timeout: "1600s"
