--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,7 @@
 steps:
 - name: "gcr.io/cloud-builders/gcloud"
-  args: ["app", "deploy"]
+  args: ["app", "deploy", "--version=v1"]
 - name: "gcr.io/cloud-builders/gcloud"
-  args: ["app", "deploy", 'new/', '--no-stop-previous-version']
+  args: ["app", "deploy", 'new/', '--no-stop-previous-version', "--version=v2"]
 
 timeout: "1600s"
